--- a/client/app/todos/todos-add.component.html
+++ b/client/app/todos/todos-add.component.html
@@ -1,5 +1,5 @@
 <form>
-    <input type="text" placeholder="Todo" required #todo>
+    <input type="text" placeholder="Todo" #todo>
 
     <button type="submit" (click)="onSubmit(todo)">Add</button>
 </form>
